[package]
name = "polynomial"
version = "0.2.5"
edition = "2021"
rust-version = "1.70.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gifnksm/polynomial-rs"
description = "A library for manipulating polynomials"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
default = ["std"]
std = ["num-traits/std"]

[package.metadata.release]
pre-release-replacements = [
    { file = "README.md", search = "polynomial = \"[0-9\\.]+\"", replace = "{{crate_name}} = \"{{version}}\"" }
]
