[package]
name = "polynomial"
version = "0.2.6"
edition = "2021"
rust-version = "1.74.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gifnksm/polynomial-rs"
description = "A library for manipulating polynomials"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.5"
iter_num_tools = "0.7.1"
num-complex = "0.4"
rand = "0"
num-rational = "0.4"
num-bigint = "0.4"

[[bench]]
name = "benchmark"
harness = false

[features]
serde = ["dep:serde"]
default = ["std"]
std = ["num-traits/std"]
libm = ["num-traits/libm"]

[package.metadata.release]
pre-release-replacements = [
    { file = "README.md", search = "polynomial = \"[0-9\\.]+\"", replace = "{{crate_name}} = \"{{version}}\"" },
    { file = "README.md", search = "polynomial = \\{version = \"[0-9\\.]+\"", replace = "{{crate_name}} = {version = \"{{version}}\"" }
]
